--- a/app/views/admin/workshops/show.html.haml
+++ b/app/views/admin/workshops/show.html.haml
@@ -43,14 +43,10 @@
     %br
 
     .row
-      .large-3.small-6.columns#host
+      .medium-8.columns#host
         - if @workshop.venue.present?
-          %h4 Venue
-          %strong= @workshop.venue.name
-          %br
-          %small
-            = @address.to_html
-      .large-3.small-6.columns#sponsors
+          = render 'shared/venue', venue: @address, map: false
+      .medium-4.columns#sponsors
         - if (@workshop.sponsors - [@workshop.host]).any?
           %h4 Sponsors
           %ul.no-bullet
@@ -58,7 +54,8 @@
               %li
                 %span
                   = link_to sponsor.name, [:admin, sponsor]
-      .large-6.small-12.columns
+    .row
+      .medium-12.columns
         %h4 Team
         - @workshop.organisers.each do |organiser|
           %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: organiser.full_name }
