--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -48,15 +48,9 @@
 
 .stripe.reverse
   .row
-    .large-8.columns
-      %h4 Venue
-      %p
-        %strong= @course.venue.name
-        %br
-          = @host_address.to_html
-      %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
-      = link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-    .large-4.columns
+    .medium-8.columns
+      = render 'shared/venue', venue: @host_address
+    .medium-4.columns
       %h4 Sponsors
       %ul.no-bullet
         - @course.sponsors.each do |sponsor|
