--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -77,16 +77,8 @@
 .stripe
   .row
     .medium-8.columns
-      %a{ name: "location" }
-      %h4{ "data-magellan-destination" => "location"} Venue
-      %p
-        %strong= @workshop.host.name
-        %br
-          = @host_address.to_html
-        %br
-      %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
-      =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-    .large-4.columns
+      = render 'shared/venue', venue: @host_address
+    .medium-4.columns
       %h4 Sponsors
       %ul.no-bullet
         - @workshop.sponsors.each do |sponsor|
