--- a/app/views/admin/events/edit.html.haml
+++ b/app/views/admin/events/edit.html.haml
@@ -73,7 +73,14 @@
                   = f.input :invitable, as: :boolean, hint: "Allow members to RSVP"
               .row
                 .large-12.columns
-                  = f.input :show_faq, as: :boolean, hint: "Display FAQ?"
+                  = f.input :show_faq, as: :boolean, hint: "Display FAQ section?"
+              .row
+                .large-12.columns
+                  = f.input :display_coaches, as: :boolean
+              .row
+                .large-12.columns
+                  = f.input :display_students, as: :boolean
+
         .row
           .large-12.columns.text-right
             = f.submit "Save", class: "button"
