Use default render partials in dashboard instead of events/minified_event
This fixes #346, because meetings will get sent to the meetings
partial, instead of sending them to the events partial which breaks.

--- a/app/views/dashboard/dashboard.html.haml
+++ b/app/views/dashboard/dashboard.html.haml
@@ -41,6 +41,5 @@
             .row
               .medium-12.columns
                 %h4= date
-            - workshops.each do |workshop|
-              = render partial: 'events/minified_event', locals: { event:  workshop }
+            = render workshops
             %br
