Remove all remaining references to minified_event
These can now all be replaced with default rendering behavior, and the
redirection can be eliminated.

--- a/app/views/events/_events.html.haml
+++ b/app/views/events/_events.html.haml
@@ -4,5 +4,4 @@
       .row.grouped_events
         .medium-12.columns
           %h4= date
-        - workshops.each do |workshop|
-          = render partial: 'events/minified_event', locals: { event:  workshop }
+        = render workshops
