--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -59,19 +59,16 @@
                 %strong Why?
                 = @invitation.member.bans.active.first.reason
           - else
-            - if @invitation.for_coach?
-              - if @workshop.coach_spaces?
+            - if @invitation.can_accept?
+              - if @invitation.for_coach?
                 = link_to "Attend", accept_invitation_url(@invitation), class: "expand button round center"
               - else
-                = render partial: 'invitation/waiting_list', locals: { invitation: @invitation }
-            - else
-              - if @workshop.student_spaces?
                 = simple_form_for @invitation, url: :accept_with_note_invitation, method: :post do |f|
                   = f.input :note, label: "I will be working on... ", collection: @tutorial_titles, required: true, include_blank: false
                   = f.button :submit, "Attend",  class: "button expand round"
                   %label *Letting us know what you plan to work on will help us pair you up with a coach.
-              - else
-                = render partial: 'invitation/waiting_list', locals: { invitation: @invitation }
+            - else
+              = render partial: 'invitation/waiting_list', locals: { invitation: @invitation }
 
 
 .stripe
