Add elements to the workshop admin pages to set random_allocate_at
Because the pickadate widget gives us separate date and time, we
assemble the params in the controller manually.

--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -20,5 +20,8 @@
       = f.collection_select :organisers, Member.all, :id, :full_name, { selected: @workshop.organisers.map(&:id) }, { multiple: true }
       = f.input :invitable
   .row
+    .large-4.columns
+      = render partial: "random_allocate_input"
+  .row
     .large-12.columns.text-right
       = f.submit "Save", class: "button"
