Added a @chapter variable and used it in the views to display chapter email addresses

--- a/app/views/workshops/added.html.haml
+++ b/app/views/workshops/added.html.haml
@@ -15,7 +15,7 @@
 
         %p
           We're looking forward to seeing you at codebar soon!
-          = link_to "Drop us an email", "mailto:hello@codebar.io"
+          = link_to "Drop us an email", "mailto:#{@chapter.email}&cc=hello@codebar.io"
           if you have any questions.
         %p
           = link_to "« Return to the workshop page", workshop_path(@workshop)
