--- a/app/views/workshops/removed.html.haml
+++ b/app/views/workshops/removed.html.haml
@@ -10,7 +10,7 @@
 
         %p
           Even though you can't make it to this codebar, we're looking forward to seeing you at another codebar soon!
-          = link_to "Drop us an email", "mailto:hello@codebar.io"
+          = link_to "Drop us an email", "mailto:#{@chapter.email}&cc=hello@codebar.io"
           if you have any questions.
         %p
           = link_to "« Return to the workshop page", workshop_path(@workshop)
