--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -28,7 +28,7 @@
     .large-3.columns
       = render partial: 'shared/social_media'
       %span.git-tip
-        %script{ :"data-gittip-username" => "by_codebar", :src => "//gttp.co/v1.js" }
+        %script{ :"data-gittip-username" => "~by_codebar", :src => "//gttp.co/v1.js" }
   .row
     .large-12.columns
       = link_to "https://www.gosquared.com/", title: "GoSquared.com" do
