--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,9 @@
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "vendor/modernizr"
     = javascript_include_tag "application", "data-turbolinks-track" => true
-    %link{ href: 'http://fonts.googleapis.com/css?family=Gabriela', rel: 'stylesheet', type: 'text/css' }
-    %link{ href: 'http://fonts.googleapis.com/css?family=Cousine:400,700', rel:'stylesheet', type:'text/css'}
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    %link{ href: 'https://fonts.googleapis.com/css?family=Gabriela', rel: 'stylesheet', type: 'text/css' }
+    %link{ href: 'https://fonts.googleapis.com/css?family=Cousine:400,700', rel:'stylesheet', type:'text/css'}
+    %link{ href: 'https://fonts.googleapis.com/css?family=Open+Sans:400,300', rel:'stylesheet', type:'text/css' }
     = csrf_meta_tags
   %body.no-js
     .off-canvas-wrap{ "data-offcanvas" => true }
