--- a/app/views/workshops/waitlisted.html.haml
+++ b/app/views/workshops/waitlisted.html.haml
@@ -17,7 +17,7 @@
 
         %p
           We hope to see you at codebar soon!
-          = link_to "Drop us an email", "mailto:#{@chapter.email}&cc=hello@codebar.io"
+          = link_to "Drop us an email", "mailto:#{@chapter.email}?cc=hello@codebar.io"
           if you have any questions.
         %p
           = link_to "« Return to the workshop page", workshop_path(@workshop)
