--- a/app/views/admin/workshops/show.html.haml
+++ b/app/views/admin/workshops/show.html.haml
@@ -1,4 +1,4 @@
-.icon-bar.five-up
+.icon-bar.six-up
   =link_to edit_admin_workshop_path(@workshop), class: 'item' do
     %i.fa.fa-pencil
     %label Edit
@@ -11,6 +11,7 @@
       %i.fa.fa-send-o
       %label Invite
   - else
+
     =link_to "#", class: "item disabled", title: "The workshop is not invitable." do
       %i.fa.fa-send-o
       %label Invite
@@ -23,6 +24,9 @@
   =link_to admin_workshop_attendees_emails_path(@workshop, format: 'text'), title: "Attendee emails", class: 'item' do
     %i.fa.fa-at
     %label Emails
+  =link_to admin_workshop_path(@workshop), method: :delete, data: { confirm: 'Are you sure you want to delete this workshop?' }, title: "Destroy workshop", class: 'item' do
+    %i.fa.fa-remove
+    %label Destroy
 
 
 %section
