--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,26 +1,20 @@
-= render partial: 'shared/title', locals: { title: "Jobs ", date: nil }
-- if is_verified_coach_or_admin?
-  .row
-    .large-12.columns.text-right
-      =link_to "List a job", new_job_path, class: 'button round alert'
-
-- unless @jobs.any?
+.stripe.reverse
   .row
     .large-12.columns
-      %p
-        There are no jobs available at the moment
-
-- @jobs.each do |job|
+      %h1 Jobs
   .row
     .large-12.columns
-      .panel.callout
-        %h4
-          =link_to job do
-            #{job.title} at #{job.company}
+      - if @jobs.none?
+        %p
+          There are no jobs available at the moment
+
+      %dl
+        - @jobs.each do |job|
+          %dt
+            =link_to job do
+              #{job.title}
             %small.fa.fa-location-arrow
               = job.location
-        =link_to job do
-          %p
-            =truncate(sanitize(dot_markdown(job.description), tags: { }), length: 200)
-        %p.text-right
-          Posted by #{job.created_by.full_name} on #{l(job.created_at, format: :date)}
+            - if job.expiry_date.past?
+              %label.label.alert Expired
+          %dd submitted #{distance_of_time_in_words(Time.now, job.created_at)} ago
