--- a/app/views/layouts/_aside.html.haml
+++ b/app/views/layouts/_aside.html.haml
@@ -9,6 +9,7 @@
     %li= link_to "Dashboard", dashboard_path
     %li=link_to "Invitations", invitations_path
     %li=link_to "Profile", profile_path
+    %li=link_to "Jobs",  jobs_path
     %li=link_to "Manage subscriptions", subscriptions_path
     %li
       =link_to logout_path do
