Update new/preview/submit views add tests ensure job post cannot be edited after approval

--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -1,28 +1,28 @@
-.row
-  .medium-12.columns
-    %p.panel Jobs will appear after they are reviewed and authorised. Please think twice before posting a job, as we want to create a job board that our community trusts.
-    = simple_form_for @job do |f|
-      .row
-        .large-6.columns
-          = f.input :title, label: "Job title", required: true, placeholder: "e.g. Internship"
-      .row
-        .large-6.columns
-          = f.input :company, required: true, placeholder: "e.g. codebar", required: true
-      .row
-        .large-6.columns
-          = f.input :location, required: true, placeholder: "e.g. London or Remote", required: true
-      .row
-        .large-12.columns
-          = f.input :description, placeholder: 'Use text or markdown for the job description', input_html: { rows: 10 }, required: true
-      .row
-        .large-6.columns
-          = f.input :email, label: "Job application email", required: true
-      .row
-        .large-6.columns
-          = f.input :link_to_job, required: true
-      .row
-        .large-6.columns
-          = f.input :expiry_date, as: :date, order: [:day, :month, :year], start_year: Date.current.year, start_month: Date.current.month, end_year: (Date.current+2.months).year, default: Date.current+2.weeks, input_html: { class: 'medium-3 columns'  }, required: true
-      .row
-        .large-12.columns.text-right
-          = f.submit "Update", class: "button round tiny"
+- if @pending_jobs
+  %p You have #{@pending_jobs.count} job posts pending approval
+
+= simple_form_for @job do |f|
+  .row
+    .large-6.columns
+      = f.input :title, label: "Job title", required: true, placeholder: "e.g. Internship"
+  .row
+    .large-6.columns
+      = f.input :company, required: true, placeholder: "e.g. codebar"
+  .row
+    .large-6.columns
+      = f.input :location, required: true, placeholder: "e.g. London or Remote"
+  .row
+    .large-12.columns
+      = f.input :description, placeholder: 'Use text or markdown for the job description', input_html: { rows: 10 }, required: true
+  .row
+    .large-6.columns
+      = f.input :email, label: "Job email"
+  .row
+    .large-6.columns
+      = f.input :link_to_job, label: "Link to job post", required: true
+  .row
+    .large-6.columns
+      = f.input :expiry_date, label: "Application closing date", as: :date, order: [:day, :month, :year], start_year: Date.current.year, start_month: Date.current.month, end_year: (Date.current+2.months).year, default: Date.current+2.weeks, input_html: { class: 'medium-3 columns' }, required: true
+  .row
+    .large-12.columns.text-right
+      = f.submit "Update", class: "button round tiny"
