--- a/app/views/jobs/edit.html.haml
+++ b/app/views/jobs/edit.html.haml
@@ -1,2 +1,8 @@
-= render partial: 'shared/title', locals: { title: "Review job", date: nil }
-= render partial: 'form'
+.stripe.reverse
+  .row
+    .large-12.columns
+      %h1 Edit job post
+.stripe.reverse
+  .row
+    .large-12.columns
+      = render partial: 'form'
