--- a/app/views/layouts/_aside.html.haml
+++ b/app/views/layouts/_aside.html.haml
@@ -5,11 +5,14 @@
     - elsif current_user.has_role?(:organiser, :any)
       = render 'layouts/organiser_menu'
     %li
+      %label Portal
+      %li=link_to "Jobs",  jobs_path
+      %li=link_to "List a job",  new_job_path
+    %li
       %label Account
     %li= link_to "Dashboard", dashboard_path
     %li=link_to "Invitations", invitations_path
     %li=link_to "Profile", profile_path
-    %li=link_to "Jobs",  jobs_path
     %li=link_to "Manage subscriptions", subscriptions_path
     %li
       =link_to logout_path do
