- Update UI in admin/jobs - add instructions for approving job

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,6 +9,7 @@
 @import 'partials/admin_workshop';
 @import 'partials/sponsors';
 @import 'partials/organisers';
+@import 'partials/jobs';
 
 #banner, #chapter {
   margin-top: 30px;
