--- a/app/views/jobs/_show.html.haml
+++ b/app/views/jobs/_show.html.haml
@@ -23,7 +23,10 @@
     %b Application deadline: #{I18n.l(@job.expiry_date, format: :default_date)} (in #{distance_of_time_in_words(Time.now, @job.expiry_date)})
   .large-6.columns.text-right
     %p
-      %em posted by <b>#{link_to @job.created_by.full_name, admin_member_path(@job.created_by)}</b> on #{l(@job.created_at, format: :date)}
+      - if admin
+        %em posted by <b>#{link_to @job.created_by.full_name, admin_member_path(@job.created_by)}</b> on #{l(@job.created_at, format: :date)}
+      - else
+        %em posted by <b>#{link_to @job.created_by.full_name, twitter_url_for(@job.created_by.twitter)}</b> on #{l(@job.created_at, format: :date)}
 %br
 .row
   .large-12.columns.text-right
