set admin view to false

--- a/app/views/jobs/preview.html.haml
+++ b/app/views/jobs/preview.html.haml
@@ -4,7 +4,7 @@
       This is a preview. <b>Submit</b> to verify your post or <b>Edit</b> to amend.
 
 
-= render partial: 'jobs/show'
+= render partial: 'jobs/show', locals: { admin: false }
 
 %br
 .stripe
