--- a/app/views/admin/jobs/show.html.haml
+++ b/app/views/admin/jobs/show.html.haml
@@ -2,29 +2,31 @@
   .row
     .large-12.columns
       %h1 Review job
-.alert-box
-  .row
-    .large-12.columns
-      %p
-        Before approving this job make sure
-        %ul.no-bullet
-          %li
-            %input#work_details{type: 'checkbox'}
-            %label{for: 'work_details'} The post details the work that will have to be undertaken
-          %li
-            %input#roles{type: 'checkbox'}
-            %label{for: 'roles'} It's suitable for people looking for Internships and Junior roles that will enable them to build up their career
-          %li
-            %input#reliable_source{type: 'checkbox'}
-            %label{for: 'reliable_source'} It was posted by someone you know or a reliable source
-          %li
-            %input#payment{type: 'checkbox'}
-            %label{for: 'payment'} Payment confirmation was posted in the London organisers Slack channel
-          %li
-            %input#to-the-point{type: 'checkbox'}
-            %label{for: 'to-the-point'} The post is short and to the point
+- unless @job.approved? or @job.expired?
+  .alert-box
+    .row
+      .large-12.columns
+        %p
+          Before approving this job make sure
+          %ul.no-bullet
+            %li
+              %input#work_details{type: 'checkbox'}
+              %label{for: 'work_details'} The post details the work that will have to be undertaken
+            %li
+              %input#roles{type: 'checkbox'}
+              %label{for: 'roles'} It's suitable for people looking for Internships and Junior roles that will enable them to build up their career
+            %li
+              %input#reliable_source{type: 'checkbox'}
+              %label{for: 'reliable_source'} It was posted by someone you know or a reliable source
+            %li
+              %input#payment{type: 'checkbox'}
+              %label{for: 'payment'} Payment confirmation was posted in the London organisers Slack channel
+            %li
+              %input#to-the-point{type: 'checkbox'}
+              %label{for: 'to-the-point'} The post is short and to the point
 
-%br
+  %br
+
 %br
 =render partial: 'jobs/show', locals: { admin: true }
 
@@ -35,4 +37,5 @@
       - if @job.approved?
         %label.label.success Approved
       - else
-        =link_to "Approve", admin_job_approve_path(@job), class: 'button round alert'
+        - unless @job.expired?
+          =link_to "Approve", admin_job_approve_path(@job), class: 'button round alert'
