--- a/app/views/members/step2.html.haml
+++ b/app/views/members/step2.html.haml
@@ -1,19 +1,19 @@
 %section#banner.sign-up-wizard
   .row
     .medium-12.columns
-      %h1 Pick an invite list
+      %h1 Subscribe
       %p
-        You can register for events on the codebar site, but it's easier via email.
-        Join an email list below to receive invites for that location.
+        To receive invitations to our events you must subscribe to the appropriate groups. Alternatively, you can always RSVP directly from the website. Just be aware that spots to some of our busier chapters go away really fast.
 
-  - if current_user.coach?
-    = render partial: 'coach_invite_subscriptions', locals: {groups: @coach_groups, collapsed: false}
-    = render partial: 'student_invite_subscriptions', locals: {groups: @student_groups, collapsed: true}
-  - else
+  - if current_user.student?
+
     = render partial: 'student_invite_subscriptions', locals: {groups: @student_groups, collapsed: false}
     = render partial: 'coach_invite_subscriptions', locals: {groups: @coach_groups, collapsed: true}
+  - else
+    = render partial: 'coach_invite_subscriptions', locals: {groups: @coach_groups, collapsed: false}
+    = render partial: 'student_invite_subscriptions', locals: {groups: @student_groups, collapsed: true}
 
   .row
     .large-6.large-offset-3.columns
       %p
-        = link_to "Done", root_path, class: "button round right"
+        = link_to "Done", profile_path, class: "button round right"
