- add My Profile, My Dashboard and Update details on sidebar - expose preferred_pronoun field - create readable member profile - remove subscriptions from member_edit as we already have that functionality in /subscriptions - group tests and confirm feature result through interface

--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -24,6 +24,9 @@
     .row
       .medium-8.columns
         %dl
+          %dt Preferred pronoun
+          %dd= @member.preferred_pronoun || "Not specified"
+
           %dt Email
           %dd= mail_to @member.email, @member.email
 
