--- a/app/views/members/_new.html.haml
+++ b/app/views/members/_new.html.haml
@@ -1,6 +1,9 @@
 = simple_form_for @member, method: :put do |f|
   .row
     .large-6.columns
+      = f.input :preferred_pronoun
+  .row
+    .large-6.columns
       = f.input :name
     .large-6.columns
       = f.input :surname
