Display HTML in event descriptions

--- a/app/views/admin/events/show.html.haml
+++ b/app/views/admin/events/show.html.haml
@@ -63,7 +63,7 @@
     %br
     .row
       .large-12.columns
-        %p.lead= @event.description
+        %p.lead= @event.description.html_safe
     - if @event.tito_url.present?
       .row
         .large-6.columns
