--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -4,7 +4,7 @@
       %h2= @event.name
       %h3
         %small #{l(@event.date_and_time)} to #{l(@event.ends_at, format: :time) }
-      %p.lead= @event.description
+      %p.lead= @event.description.html_safe
 
   .row
     .large-10.columns
