--- a/app/views/admin/meetings/show.html.haml
+++ b/app/views/admin/meetings/show.html.haml
@@ -8,37 +8,27 @@
     .row
       .medium-12.columns
         %h2
-          =@event.to_s
+          =@meeting.to_s
         %h3
-          %small #{l(@event.date_and_time)}
+          %small #{l(@meeting.date_and_time)}
 
     .row
-      - if @event.venue.present?
+      - if @meeting.venue.present?
         .medium-1.columns
-          - unless @event.spaces?
+          - unless @meeting.spaces?
             %label.label.warning Workshop full
           %br
           %br
 
     .row
       .large-3.small-6.columns#host
-        - if @event.venue.present?
+        - if @meeting.venue.present?
           %h4 Venue
-          %strong= @event.venue.name
+          %strong= @meeting.venue.name
           %br
-          %small
-            = @address.to_html
-      .large-3.small-6.columns#sponsors
-        - if @event.sponsors.any?
-          %h4 Sponsors
-          %ul.no-bullet
-            - @event.sponsors.each do |sponsor|
-              %li
-                %span
-                  = link_to sponsor.name, [:admin, sponsor]
       -#.large-6.small-12.columns
       -#  %h4 Team
-        -#- @event.organisers.each do |organiser|
+        -#- @meeting.organisers.each do |organiser|
         -#  %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: organiser.full_name }
         -#    = image_tag(organiser.avatar(40))
 
