Working on issue 390 regarding invites to.  Threee instances of invites to found and changed to invitations to instead

--- a/app/views/member_mailer/welcome_coach.html.haml
+++ b/app/views/member_mailer/welcome_coach.html.haml
@@ -11,7 +11,7 @@
   - else
     We send out invitations to our events via email.
     = link_to "Sign up from the subscriptions page", subscriptions_url
-    to receive invites to our weekly workshops.
+    to receive invitations to our weekly workshops.
   Places are limited, so be sure to respond quickly if you want to attend.
 
 %p
