--- a/app/views/members/step1.html.haml
+++ b/app/views/members/step1.html.haml
@@ -19,7 +19,7 @@
 
     .row
       .large-6.large-offset-3.columns
-        = f.input :email, label: "Email address", hint: "We send you invites to our events via email.", required: true
+        = f.input :email, label: "Email address", hint: "We will send you invitations to our events via email.", required: true
 
     .row
       .large-6.large-offset-3.columns
