--- a/app/views/meetings/_meeting.html.haml
+++ b/app/views/meetings/_meeting.html.haml
@@ -6,7 +6,7 @@
           = meeting.time
     .small-9.medium-10.columns
       .title
-        =link_to meeting.to_s, meeting.path
+        =link_to meeting.name, meeting_path(meeting.slug)
         - if meeting.venue.present?
           at
           = link_to meeting.venue.name, meeting.venue.website
