--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -2,47 +2,14 @@
   .row
     .medium-12.columns
       %h2
-        =@meeting.title
+        =@meeting.name
       %h3
         %small=humanize_date_with_time(@meeting.date_and_time)
+      %p.lead= @meeting.description.html_safe
 
-%section.meeting.stripe.reverse
   .row
-    .large-12.columns
-      %ul.no-bullet
-        - @meeting.meeting_talks.each do |talk|
-          %li
-            %h3
-              =talk.title
-            - if talk.description.present?
-              %h4
-                %small.subheader
-                  =talk.description
-
-            %p
-              = talk.abstract.html_safe
-
-            .row
-              .small-2.columns
-                =link_to twitter_url_for(talk.speaker.twitter) do
-                  =image_tag talk.speaker.avatar(96), class: 'th radius'
-
-              .small-4.columns
-                =link_to twitter_url_for(talk.speaker.twitter) do
-                  = talk.speaker.full_name
-                %p= talk.speaker.about_you.html_safe
-.stripe.reverse
-  .row
-    .large-12.columns
-      %p To secure a place at the meeting, you must #{link_to "register with our host, <strong>#{@meeting.venue.name}</strong>".html_safe, @meeting.lanyrd_url}
-      .row
-        .large-3.columns
-          = link_to image_tag(@meeting.venue.avatar, class: "sponsor-logo", alt: @meeting.venue.name), @meeting.venue.website
-          %br
-          = AddressDecorator.decorate(@meeting.venue.address).to_html
-        .large-9.columns
-          %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@map_address}&ie=UTF8&t=m&z=15&output=embed} }
-          %br
-          %small
-            =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@map_address}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
+    .large-3.small-6.columns#host
+      - if @meeting.venue.present?
+        %h4 Venue
+        %strong= @meeting.venue.name
 
