--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -13,3 +13,15 @@
         %h4 Venue
         %strong= @meeting.venue.name
 
+  .row
+    .large-10.columns
+      - if @meeting.invitable
+
+        - if @meeting.attending?(current_user)
+          %h5 You are attending this event.
+          %strong
+            = link_to "Can't make it anymore?", meeting_cancel_path(meeting_id: @meeting.id, token: @invitation.token)
+        - else
+          = link_to meeting_invitation_path(@meeting), class: 'button round' do
+            = "Attend"
+
