--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -13,15 +13,19 @@
         %h4 Venue
         %strong= @meeting.venue.name
 
+  %br
   .row
     .large-10.columns
-      - if @meeting.invitable
+      - if @meeting.invitable && @meeting.not_full
 
         - if @meeting.attending?(current_user)
           %h5 You are attending this event.
           %strong
-            = link_to "Can't make it anymore?", meeting_cancel_path(meeting_id: @meeting.id, token: @invitation.token)
+            = link_to "Can't make it anymore? Click here to cancel your spot.", meeting_cancel_path(meeting_id: @meeting.id, token: @invitation.token)
         - else
           = link_to meeting_invitation_path(@meeting), class: 'button round' do
             = "Attend"
+      - elsif !@meeting.not_full
+        %h5 This event is now full.
+        %strong To join the waitlist, please <a href="mailto:london@codebar.io">email us</a>.
 
