--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -12,6 +12,7 @@
       - if @meeting.venue.present?
         %h4 Venue
         %strong= @meeting.venue.name
+        %p= @host_address
 
   %br
   .row
@@ -29,3 +30,8 @@
         %h5 This event is now full.
         %strong To join the waitlist, please <a href="mailto:london@codebar.io">email us</a>.
 
+.stripe.reverse
+  .row
+    .large-12.columns
+      %iframe{ width: '100%', height: '250', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
+        =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
