Add organisers to meetings view page

--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -53,3 +53,5 @@
             %br
             =a.member.full_name
 
+.stripe.reverse
+  = render partial: 'members/organisers_grid', locals: { members: @meeting.organisers, show_info: false }
