Fix user dashboard view, add alias to meeting_invitations for relationship to meeting

--- a/app/views/meetings/_meeting.html.haml
+++ b/app/views/meetings/_meeting.html.haml
@@ -4,6 +4,14 @@
       .date
         .time
           = meeting.time
+      .text-center
+        - if @user
+          - if @user.attending?(meeting)
+            %label.label.success Attending
+          - if @user.event_organiser?(meeting)
+            = link_to meeting.admin_path do
+              %label.label Manage
+
     .small-9.medium-10.columns
       .title
         =link_to meeting.name, meeting_path(meeting.slug)
@@ -12,6 +20,15 @@
           = link_to meeting.venue.name, meeting.venue.website
       .row
         .medium-6.columns
+          - if meeting.organisers.any?
+            .organisers
+              - meeting.organisers.each do |organiser|
+                =link_to twitter_url_for(organiser.twitter) do
+                  =image_tag organiser.avatar(26), class: 'th radius', title: organiser.full_name
+
         .medium-6.columns#sponsors
+          - if meeting.venue.present?
+            = link_to meeting.venue.website do
+              = image_tag meeting.venue.avatar, class: 'sponsor'
 
       %br
