separate skills with a comma in edit form

--- a/app/views/members/_new.html.haml
+++ b/app/views/members/_new.html.haml
@@ -19,7 +19,7 @@
       = f.input :about_you, as: :text, label: "Tell us a little bit about yourself", required: true
     - if @member.coach?
       .large-6.columns
-        = f.input :skill_list, label: "Skills, enter as a comma separated list"
+        = f.input :skill_list, label: "Skills, enter as a comma separated list", input_html: { value: @member.skill_list.join(", ") }
 
   .row
     .large-12.columns.text-right
