--- a/app/assets/stylesheets/partials/_sponsors.scss
+++ b/app/assets/stylesheets/partials/_sponsors.scss
@@ -1,7 +1,18 @@
 #sponsors {
-  .sponsor-logo {
-    height: 100px;
-    padding-bottom: 20px;
+  .sponsor {
+  	position: relative;
+  	padding-top: 20%;
+  	margin-bottom: 20px;
+  }
+  .sponsor-image {
+  	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	-moz-transform: translate(-50%, -50%);
+  	-webkit-transform: translate(-50%, -50%);
+  	transform: translate(-50%, -50%);
+  	max-width: 60%;
+  	max-height: 100%;
   }
 }
 
