converting sass file to scss and cleaning up stylesheets folder: moving event.scss and star-rating.scss to partials folder

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,7 @@
 @import 'partials/layout';
 @import 'partials/title';
 @import 'partials/events';
+@import 'partials/event';
 @import 'partials/social_media';
 @import 'partials/chapter';
 @import 'partials/member_note';
@@ -9,6 +10,7 @@
 @import 'partials/admin_workshop';
 @import 'partials/sponsors';
 @import 'partials/organisers';
+@import 'partials/star-rating';
 
 #banner, #chapter {
   margin-top: 30px;
