Add ability to export name label CSVs for events and meetings

--- a/app/views/admin/events/show.html.haml
+++ b/app/views/admin/events/show.html.haml
@@ -19,6 +19,10 @@
     %i.fa.fa-at
     %label Emails
 
+  =link_to admin_event_path(@event, format: 'csv'), class: 'item', title: "CSV for labels" do
+    %i.fa.fa-users
+    %label Labels
+
 
 %section
   .stripe.reverse
