--- a/app/views/admin/events/_invitation_management.html.haml
+++ b/app/views/admin/events/_invitation_management.html.haml
@@ -7,6 +7,21 @@
             <strong>#{@event.invitations.count}</strong> members have been invited to this event.
             %br
             <strong>#{@attending_students.count}</strong> are attending as students and <strong>#{@attending_coaches.count}</strong> as coaches.
+
+  .row
+    .large-9.columns
+      %small
+      .row
+        = simple_form_for :invitations, url: admin_event_invitations_path do |f|
+          .medium-6.columns
+            = f.select :member, Member.all.map { |u| ["#{u.full_name}", u.id] }, { include_blank: true }, { class: 'chosen-select', required: true, data: { placeholder: 'Select a member to RSVP' } }
+
+            = f.input :meeting_id, :as => :hidden, :input_html => { :value => @meeting.slug }
+          .large-3.columns
+            %span{ "data-tooltip" => true, "aria-haspopup" => "true", class: "has-tip", title: t('admin.workshop.manage_rsvps.text') }
+              %i.fa.fa-info
+            = f.submit "Add"
+  %br
   .row
     .medium-6.columns
       %h4
