--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -12,7 +12,7 @@
     %section.top-bar-section
       %ul.right
         %li
-          = link_to "http://blog.codebar.io" do
+          = link_to "https://medium.com/the-codelog" do
             %span Blog
         - if current_page?(events_path)
           %li.active
